refact: fixed horizontal scroll on mobile version

--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -8,6 +8,6 @@
 
 @media screen and (max-width: 767px){
   .footer__copyright{    
-    margin: 48px 0 0;
+    margin: 48px 0 0 16px;
   }
 }
