--- a/blocks/footer/__nav/footer__nav.css
+++ b/blocks/footer/__nav/footer__nav.css
@@ -8,5 +8,6 @@
 @media screen and (max-width: 767px){
   .footer__nav{    
     flex-direction: column;
+    margin-left: 16px;
   }
 }
