--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -30,7 +30,7 @@
 
 @media screen and (max-width: 424px){
   .footer{
-    padding: 64px 0 24px 16px;
+    padding: 64px 0 24px;
     width: 100%;
     flex-direction: column;
     align-items: flex-start;
